syntax = "proto3";

package go.micro.service.secrets;

service Secrets {
	rpc Create(CreateRequest) returns (CreateResponse) {};
	rpc Read(ReadRequest) returns (ReadResponse) {};
	rpc Update(UpdateRequest) returns (UpdateResponse) {};
	rpc Delete(DeleteRequest) returns (DeleteResponse) {};
}

message CreateRequest {
  repeated string path = 1;
  string value = 2;
}

message ReadRequest {
  repeated string path = 1;
}

message UpdateRequest {
  repeated string path = 1;
  string value = 2;
}

message DeleteRequest {
  repeated string path = 1;
}

message CreateResponse {}

message ReadResponse {
  string value = 1;
}

message UpdateResponse {}

message DeleteResponse {}
